--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@swc/helpers": "^0.4.14",
     "axios": "^1.1.3",
     "framer-motion": "^7.2.1",
     "next": "12.2.4",
