--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "next-seo": "^5.13.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-burger-menu": "^3.0.8",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-particles": "^2.3.3",
     "react-spotify-player": "^1.0.4",
+    "react-virtual-list": "^2.3.0",
+    "react-virtualized": "^9.22.3",
     "sass": "^1.54.5",
     "three": "^0.144.0",
     "tsparticles": "^2.3.4"
